// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`active ticket form renders the expected components 1`] = `
<div>
  <div
    style="display: block;"
  >
    <form
      class="form "
      novalidate=""
    >
      <div
        class="container"
      >
        <div
          class="sc-bwzfXH jaHvNe"
        >
          <div
            class="sc-bxivhb sc-ifAKCX kPfswV"
          >
            <h1
              class="sc-htpNat jTlEqc"
              data-testid="widget-title"
            >
              message
            </h1>
            <button
              aria-label="Minimize"
              class="IconButton-x15t1e-0 sc-EHOje index__c-btn--icon___1Yl4x BqfmL Button__StyledButton-sc-12lsl5w-0 index__c-btn___3y2Qe index__c-btn--basic___38OO7 index__c-btn--muted___ze6U0 index__c-btn--sm___3Kuhv lcPfmb"
              data-garden-container-id="keyboardfocus"
              data-garden-container-version="0.2.6"
              data-garden-id="buttons.icon_button"
              data-garden-version="7.0.2"
              tabindex="0"
              type="button"
            >
              <svg
                class="index__c-btn__icon___3V0Rl"
                data-garden-id="buttons.icon"
                data-garden-version="7.0.2"
                data-testid="Icon--dash"
                realfilename="dash-fill.svg"
              />
            </button>
          </div>
        </div>
        <div
          class="container"
          data-testid="scroll-container-content"
        >
          <div
            class="formWrapper"
          >
            <h2
              class="ticketFormTitle "
            >
              Ticket Forms
            </h2>
            <div
              class="StyledField-zri3d-0 text__c-txt___Uzv-G range__c-range___1aYaS larjFb"
            >
              <label
                class="StyledTextLabel-sc-1lq8qa5-0 text__c-txt__label___3wMPZ ksCHsT"
                data-garden-container-id="field"
                data-garden-container-version="1.1.3"
                data-garden-id="forms.text_label"
                data-garden-version="7.0.2"
                for="garden-field-container-18--input"
                id="garden-field-container-18--label"
              >
                <strong>
                  Your name
                </strong>
                 (optional)
              </label>
              <input
                aria-describedby="garden-field-container-18--hint"
                aria-invalid="false"
                aria-labelledby="garden-field-container-18--label"
                class="StyledTextInput-sc-1ezxcjx-0 text__c-txt__input___38pRd icTNBi"
                data-garden-id="forms.input"
                data-garden-version="7.0.2"
                data-testid="name-field"
                id="garden-field-container-18--input"
                name="name"
                value=""
              />
            </div>
            <div
              class="StyledField-zri3d-0 text__c-txt___Uzv-G range__c-range___1aYaS larjFb"
            >
              <label
                class="StyledTextLabel-sc-1lq8qa5-0 text__c-txt__label___3wMPZ ksCHsT"
                data-garden-container-id="field"
                data-garden-container-version="1.1.3"
                data-garden-id="forms.text_label"
                data-garden-version="7.0.2"
                for="garden-field-container-19--input"
                id="garden-field-container-19--label"
              >
                <strong>
                  Email address
                </strong>
              </label>
              <input
                aria-describedby="garden-field-container-19--hint"
                aria-invalid="false"
                aria-labelledby="garden-field-container-19--label"
                class="StyledTextInput-sc-1ezxcjx-0 text__c-txt__input___38pRd icTNBi"
                data-garden-id="forms.input"
                data-garden-version="7.0.2"
                data-testid="email-field"
                id="garden-field-container-19--input"
                name="email"
                pattern="[a-zA-Z0-9!#$%&'*+/=?^_\`{|}~\\\\-\`']+(?:\\\\.[a-zA-Z0-9!#$%&'*+/=?^_\`{|}~\\\\-\`']+)*@(?:[a-zA-Z0-9](?:[a-zA-Z0-9-]*[a-zA-Z0-9])?\\\\.)+[a-zA-Z0-9](?:[a-zA-Z0-9-]*[a-zA-Z0-9])?"
                required=""
                value=""
              />
            </div>
            <div
              class="StyledField-zri3d-0 text__c-txt___Uzv-G range__c-range___1aYaS larjFb"
            >
              <label
                class="StyledTextLabel-sc-1lq8qa5-0 text__c-txt__label___3wMPZ ksCHsT"
                data-garden-container-id="field"
                data-garden-container-version="1.1.3"
                data-garden-id="forms.text_label"
                data-garden-version="7.0.2"
                for="garden-field-container-20--input"
                id="garden-field-container-20--label"
              >
                <strong>
                  Description
                </strong>
                 (optional)
              </label>
              <input
                aria-describedby="garden-field-container-20--hint"
                aria-invalid="false"
                aria-labelledby="garden-field-container-20--label"
                class="StyledTextInput-sc-1ezxcjx-0 text__c-txt__input___38pRd icTNBi"
                data-garden-id="forms.input"
                data-garden-version="7.0.2"
                id="garden-field-container-20--input"
                name="1"
                value=""
              />
            </div>
            <div
              class="StyledField-zri3d-0 text__c-txt___Uzv-G range__c-range___1aYaS larjFb"
            >
              <label
                class="StyledTextLabel-sc-1lq8qa5-0 text__c-txt__label___3wMPZ ksCHsT"
                data-garden-container-id="field"
                data-garden-container-version="1.1.3"
                data-garden-id="forms.text_label"
                data-garden-version="7.0.2"
                for="garden-field-container-21--input"
                id="garden-field-container-21--label"
              >
                <strong>
                  Subject
                </strong>
                 (optional)
              </label>
              <input
                aria-describedby="garden-field-container-21--hint"
                aria-invalid="false"
                aria-labelledby="garden-field-container-21--label"
                class="StyledTextInput-sc-1ezxcjx-0 text__c-txt__input___38pRd icTNBi"
                data-garden-id="forms.input"
                data-garden-version="7.0.2"
                id="garden-field-container-21--input"
                name="2"
                value=""
              />
            </div>
            <div
              class="StyledField-zri3d-0 text__c-txt___Uzv-G range__c-range___1aYaS larjFb"
            >
              <label
                class="StyledTextLabel-sc-1lq8qa5-0 text__c-txt__label___3wMPZ ksCHsT"
                data-garden-container-id="field"
                data-garden-container-version="1.1.3"
                data-garden-id="forms.text_label"
                data-garden-version="7.0.2"
                for="garden-field-container-22--input"
                id="garden-field-container-22--label"
              >
                <strong>
                  Favorite Pizza
                </strong>
              </label>
              <input
                aria-describedby="garden-field-container-22--hint"
                aria-invalid="false"
                aria-labelledby="garden-field-container-22--label"
                class="StyledTextInput-sc-1ezxcjx-0 text__c-txt__input___38pRd icTNBi"
                data-garden-id="forms.input"
                data-garden-version="7.0.2"
                id="garden-field-container-22--input"
                name="5"
                required=""
                value=""
              />
            </div>
            <span />
          </div>
        </div>
        <footer
          class="sc-bZQynM bbmYGO"
        >
          <div
            class="sc-gzVnrw eLrsMK"
          >
            <a
              class="icon"
              data-testid="Icon--zendesk"
              href="https://www.zendesk.com/embeddables/?utm_source=webwidget&utm_medium=poweredbyzendesk&utm_campaign=image"
              tabindex="-1"
              target="_blank"
            >
              <svg
                realfilename="widget-icon_zendesk.svg"
                title="zendesk"
              />
            </a>
            <button
              class="button Button__StyledButton-sc-12lsl5w-0 index__c-btn___3y2Qe index__c-btn--primary___1YOfW lcPfmb"
              data-garden-container-id="keyboardfocus"
              data-garden-container-version="0.2.6"
              data-garden-id="buttons.button"
              data-garden-version="7.0.2"
              data-testid="button-ok"
              tabindex="0"
              type="submit"
            >
              Send
            </button>
          </div>
        </footer>
      </div>
    </form>
  </div>
</div>
`;

exports[`active ticket form renders the expected components in mobile form 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -50,5 +50,5 @@
            >
              <h2
-               class="ticketFormTitle "
+               class="ticketFormTitle ticketFormTitleMobile"
              >
                Ticket Forms
@@ -63,6 +63,6 @@
                  data-garden-id="forms.text_label"
                  data-garden-version="7.0.2"
-                 for="garden-field-container-38--input"
-                 id="garden-field-container-38--label"
+                 for="garden-field-container-28--input"
+                 id="garden-field-container-28--label"
                >
                  <strong>
@@ -72,12 +72,12 @@
                </label>
                <input
-                 aria-describedby="garden-field-container-38--hint"
+                 aria-describedby="garden-field-container-28--hint"
                  aria-invalid="false"
-                 aria-labelledby="garden-field-container-38--label"
+                 aria-labelledby="garden-field-container-28--label"
                  class="StyledTextInput-sc-1ezxcjx-0 text__c-txt__input___38pRd icTNBi"
                  data-garden-id="forms.input"
                  data-garden-version="7.0.2"
                  data-testid="name-field"
-                 id="garden-field-container-38--input"
+                 id="garden-field-container-28--input"
                  name="name"
                  value=""
@@ -93,6 +93,6 @@
                  data-garden-id="forms.text_label"
                  data-garden-version="7.0.2"
-                 for="garden-field-container-39--input"
-                 id="garden-field-container-39--label"
+                 for="garden-field-container-29--input"
+                 id="garden-field-container-29--label"
                >
                  <strong>
@@ -101,12 +101,12 @@
                </label>
                <input
-                 aria-describedby="garden-field-container-39--hint"
+                 aria-describedby="garden-field-container-29--hint"
                  aria-invalid="false"
-                 aria-labelledby="garden-field-container-39--label"
+                 aria-labelledby="garden-field-container-29--label"
                  class="StyledTextInput-sc-1ezxcjx-0 text__c-txt__input___38pRd icTNBi"
                  data-garden-id="forms.input"
                  data-garden-version="7.0.2"
                  data-testid="email-field"
-                 id="garden-field-container-39--input"
+                 id="garden-field-container-29--input"
                  name="email"
                  pattern="[a-zA-Z0-9!#$%&'*+/=?^_\`{|}~\\\\-\`']+(?:\\\\.[a-zA-Z0-9!#$%&'*+/=?^_\`{|}~\\\\-\`']+)*@(?:[a-zA-Z0-9](?:[a-zA-Z0-9-]*[a-zA-Z0-9])?\\\\.)+[a-zA-Z0-9](?:[a-zA-Z0-9-]*[a-zA-Z0-9])?"
@@ -124,6 +124,6 @@
                  data-garden-id="forms.text_label"
                  data-garden-version="7.0.2"
-                 for="garden-field-container-40--input"
-                 id="garden-field-container-40--label"
+                 for="garden-field-container-30--input"
+                 id="garden-field-container-30--label"
                >
                  <strong>
@@ -133,11 +133,11 @@
                </label>
                <input
-                 aria-describedby="garden-field-container-40--hint"
+                 aria-describedby="garden-field-container-30--hint"
                  aria-invalid="false"
-                 aria-labelledby="garden-field-container-40--label"
+                 aria-labelledby="garden-field-container-30--label"
                  class="StyledTextInput-sc-1ezxcjx-0 text__c-txt__input___38pRd icTNBi"
                  data-garden-id="forms.input"
                  data-garden-version="7.0.2"
-                 id="garden-field-container-40--input"
+                 id="garden-field-container-30--input"
                  name="1"
                  value=""
@@ -153,6 +153,6 @@
                  data-garden-id="forms.text_label"
                  data-garden-version="7.0.2"
-                 for="garden-field-container-41--input"
-                 id="garden-field-container-41--label"
+                 for="garden-field-container-31--input"
+                 id="garden-field-container-31--label"
                >
                  <strong>
@@ -162,11 +162,11 @@
                </label>
                <input
-                 aria-describedby="garden-field-container-41--hint"
+                 aria-describedby="garden-field-container-31--hint"
                  aria-invalid="false"
-                 aria-labelledby="garden-field-container-41--label"
+                 aria-labelledby="garden-field-container-31--label"
                  class="StyledTextInput-sc-1ezxcjx-0 text__c-txt__input___38pRd icTNBi"
                  data-garden-id="forms.input"
                  data-garden-version="7.0.2"
-                 id="garden-field-container-41--input"
+                 id="garden-field-container-31--input"
                  name="2"
                  value=""
@@ -182,6 +182,6 @@
                  data-garden-id="forms.text_label"
                  data-garden-version="7.0.2"
-                 for="garden-field-container-42--input"
-                 id="garden-field-container-42--label"
+                 for="garden-field-container-32--input"
+                 id="garden-field-container-32--label"
                >
                  <strong>
@@ -190,11 +190,11 @@
                </label>
                <input
-                 aria-describedby="garden-field-container-42--hint"
+                 aria-describedby="garden-field-container-32--hint"
                  aria-invalid="false"
-                 aria-labelledby="garden-field-container-42--label"
+                 aria-labelledby="garden-field-container-32--label"
                  class="StyledTextInput-sc-1ezxcjx-0 text__c-txt__input___38pRd icTNBi"
                  data-garden-id="forms.input"
                  data-garden-version="7.0.2"
-                 id="garden-field-container-42--input"
+                 id="garden-field-container-32--input"
                  name="5"
                  required=""
`;

exports[`renders the expected components 1`] = `
<div>
  <div
    style="display: block;"
  >
    <form
      class="form "
      novalidate=""
    >
      <div
        class="container"
      >
        <div
          class="sc-bwzfXH jaHvNe"
        >
          <div
            class="sc-bxivhb sc-ifAKCX kPfswV"
          >
            <h1
              class="sc-htpNat jTlEqc"
              data-testid="widget-title"
            >
              message
            </h1>
            <button
              aria-label="Minimize"
              class="IconButton-x15t1e-0 sc-EHOje index__c-btn--icon___1Yl4x BqfmL Button__StyledButton-sc-12lsl5w-0 index__c-btn___3y2Qe index__c-btn--basic___38OO7 index__c-btn--muted___ze6U0 index__c-btn--sm___3Kuhv lcPfmb"
              data-garden-container-id="keyboardfocus"
              data-garden-container-version="0.2.6"
              data-garden-id="buttons.icon_button"
              data-garden-version="7.0.2"
              tabindex="0"
              type="button"
            >
              <svg
                class="index__c-btn__icon___3V0Rl"
                data-garden-id="buttons.icon"
                data-garden-version="7.0.2"
                data-testid="Icon--dash"
                realfilename="dash-fill.svg"
              />
            </button>
          </div>
        </div>
        <div
          class="container"
          data-testid="scroll-container-content"
        >
          <div
            class="formWrapper"
          >
            <div
              class="StyledField-zri3d-0 text__c-txt___Uzv-G range__c-range___1aYaS larjFb"
            >
              <label
                class="StyledTextLabel-sc-1lq8qa5-0 text__c-txt__label___3wMPZ ksCHsT"
                data-garden-container-id="field"
                data-garden-container-version="1.1.3"
                data-garden-id="forms.text_label"
                data-garden-version="7.0.2"
                for="garden-field-container-0--input"
                id="garden-field-container-0--label"
              >
                <strong>
                  Your name
                </strong>
                 (optional)
              </label>
              <input
                aria-describedby="garden-field-container-0--hint"
                aria-invalid="false"
                aria-labelledby="garden-field-container-0--label"
                class="StyledTextInput-sc-1ezxcjx-0 text__c-txt__input___38pRd icTNBi"
                data-garden-id="forms.input"
                data-garden-version="7.0.2"
                data-testid="name-field"
                id="garden-field-container-0--input"
                name="name"
                value=""
              />
            </div>
            <div
              class="StyledField-zri3d-0 text__c-txt___Uzv-G range__c-range___1aYaS larjFb"
            >
              <label
                class="StyledTextLabel-sc-1lq8qa5-0 text__c-txt__label___3wMPZ ksCHsT"
                data-garden-container-id="field"
                data-garden-container-version="1.1.3"
                data-garden-id="forms.text_label"
                data-garden-version="7.0.2"
                for="garden-field-container-1--input"
                id="garden-field-container-1--label"
              >
                <strong>
                  Email address
                </strong>
              </label>
              <input
                aria-describedby="garden-field-container-1--hint"
                aria-invalid="false"
                aria-labelledby="garden-field-container-1--label"
                class="StyledTextInput-sc-1ezxcjx-0 text__c-txt__input___38pRd icTNBi"
                data-garden-id="forms.input"
                data-garden-version="7.0.2"
                data-testid="email-field"
                id="garden-field-container-1--input"
                name="email"
                pattern="[a-zA-Z0-9!#$%&'*+/=?^_\`{|}~\\\\-\`']+(?:\\\\.[a-zA-Z0-9!#$%&'*+/=?^_\`{|}~\\\\-\`']+)*@(?:[a-zA-Z0-9](?:[a-zA-Z0-9-]*[a-zA-Z0-9])?\\\\.)+[a-zA-Z0-9](?:[a-zA-Z0-9-]*[a-zA-Z0-9])?"
                required=""
                value=""
              />
            </div>
            <div
              class="StyledField-zri3d-0 text__c-txt___Uzv-G range__c-range___1aYaS larjFb"
            >
              <label
                class="StyledTextLabel-sc-1lq8qa5-0 text__c-txt__label___3wMPZ ksCHsT"
                data-garden-container-id="field"
                data-garden-container-version="1.1.3"
                data-garden-id="forms.text_label"
                data-garden-version="7.0.2"
                for="garden-field-container-2--input"
                id="garden-field-container-2--label"
              >
                <strong>
                  How can we help you?
                </strong>
              </label>
              <textarea
                aria-describedby="garden-field-container-2--hint"
                aria-invalid="false"
                aria-labelledby="garden-field-container-2--label"
                class="StyledTextInput-sc-1ezxcjx-0-textarea StyledTextarea-p4bofl-0 text__c-txt__input___38pRd text__c-txt__input--area___9Qxj1 ffjHNh"
                data-garden-id="forms.textarea"
                data-garden-version="7.0.2"
                data-testid="message-field"
                id="garden-field-container-2--input"
                name="description"
                required=""
                rows="5"
              />
            </div>
            <span />
          </div>
        </div>
        <footer
          class="sc-bZQynM bbmYGO"
        >
          <div
            class="sc-gzVnrw eLrsMK"
          >
            <a
              class="icon"
              data-testid="Icon--zendesk"
              href="https://www.zendesk.com/embeddables/?utm_source=webwidget&utm_medium=poweredbyzendesk&utm_campaign=image"
              tabindex="-1"
              target="_blank"
            >
              <svg
                realfilename="widget-icon_zendesk.svg"
                title="zendesk"
              />
            </a>
            <button
              class="button Button__StyledButton-sc-12lsl5w-0 index__c-btn___3y2Qe index__c-btn--primary___1YOfW lcPfmb"
              data-garden-container-id="keyboardfocus"
              data-garden-container-version="0.2.6"
              data-garden-id="buttons.button"
              data-garden-version="7.0.2"
              data-testid="button-ok"
              tabindex="0"
              type="submit"
            >
              Send
            </button>
          </div>
        </footer>
      </div>
    </form>
  </div>
</div>
`;

exports[`renders the expected components in mobile mode 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -58,6 +58,6 @@
                  data-garden-id="forms.text_label"
                  data-garden-version="7.0.2"
-                 for="garden-field-container-12--input"
-                 id="garden-field-container-12--label"
+                 for="garden-field-container-6--input"
+                 id="garden-field-container-6--label"
                >
                  <strong>
@@ -67,12 +67,12 @@
                </label>
                <input
-                 aria-describedby="garden-field-container-12--hint"
+                 aria-describedby="garden-field-container-6--hint"
                  aria-invalid="false"
-                 aria-labelledby="garden-field-container-12--label"
+                 aria-labelledby="garden-field-container-6--label"
                  class="StyledTextInput-sc-1ezxcjx-0 text__c-txt__input___38pRd icTNBi"
                  data-garden-id="forms.input"
                  data-garden-version="7.0.2"
                  data-testid="name-field"
-                 id="garden-field-container-12--input"
+                 id="garden-field-container-6--input"
                  name="name"
                  value=""
@@ -88,6 +88,6 @@
                  data-garden-id="forms.text_label"
                  data-garden-version="7.0.2"
-                 for="garden-field-container-13--input"
-                 id="garden-field-container-13--label"
+                 for="garden-field-container-7--input"
+                 id="garden-field-container-7--label"
                >
                  <strong>
@@ -96,12 +96,12 @@
                </label>
                <input
-                 aria-describedby="garden-field-container-13--hint"
+                 aria-describedby="garden-field-container-7--hint"
                  aria-invalid="false"
-                 aria-labelledby="garden-field-container-13--label"
+                 aria-labelledby="garden-field-container-7--label"
                  class="StyledTextInput-sc-1ezxcjx-0 text__c-txt__input___38pRd icTNBi"
                  data-garden-id="forms.input"
                  data-garden-version="7.0.2"
                  data-testid="email-field"
-                 id="garden-field-container-13--input"
+                 id="garden-field-container-7--input"
                  name="email"
                  pattern="[a-zA-Z0-9!#$%&'*+/=?^_\`{|}~\\\\-\`']+(?:\\\\.[a-zA-Z0-9!#$%&'*+/=?^_\`{|}~\\\\-\`']+)*@(?:[a-zA-Z0-9](?:[a-zA-Z0-9-]*[a-zA-Z0-9])?\\\\.)+[a-zA-Z0-9](?:[a-zA-Z0-9-]*[a-zA-Z0-9])?"
@@ -119,6 +119,6 @@
                  data-garden-id="forms.text_label"
                  data-garden-version="7.0.2"
-                 for="garden-field-container-14--input"
-                 id="garden-field-container-14--label"
+                 for="garden-field-container-8--input"
+                 id="garden-field-container-8--label"
                >
                  <strong>
@@ -127,12 +127,12 @@
                </label>
                <textarea
-                 aria-describedby="garden-field-container-14--hint"
+                 aria-describedby="garden-field-container-8--hint"
                  aria-invalid="false"
-                 aria-labelledby="garden-field-container-14--label"
+                 aria-labelledby="garden-field-container-8--label"
                  class="StyledTextInput-sc-1ezxcjx-0-textarea StyledTextarea-p4bofl-0 text__c-txt__input___38pRd text__c-txt__input--area___9Qxj1 ffjHNh"
                  data-garden-id="forms.textarea"
                  data-garden-version="7.0.2"
                  data-testid="message-field"
-                 id="garden-field-container-14--input"
+                 id="garden-field-container-8--input"
                  name="description"
                  required=""
`;

exports[`renders the loading bar content 1`] = `
<div
  style="display: block;"
>
  <form
    class="form "
    novalidate=""
  >
    <div
      class="container"
    >
      <div
        class="sc-bwzfXH jaHvNe"
      >
        <div
          class="sc-bxivhb sc-ifAKCX kPfswV"
        >
          <h1
            class="sc-htpNat jTlEqc"
            data-testid="widget-title"
          >
            message
          </h1>
          <button
            aria-label="Minimize"
            class="IconButton-x15t1e-0 sc-EHOje index__c-btn--icon___1Yl4x BqfmL Button__StyledButton-sc-12lsl5w-0 index__c-btn___3y2Qe index__c-btn--basic___38OO7 index__c-btn--muted___ze6U0 index__c-btn--sm___3Kuhv lcPfmb"
            data-garden-container-id="keyboardfocus"
            data-garden-container-version="0.2.6"
            data-garden-id="buttons.icon_button"
            data-garden-version="7.0.2"
            tabindex="0"
            type="button"
          >
            <svg
              class="index__c-btn__icon___3V0Rl"
              data-garden-id="buttons.icon"
              data-garden-version="7.0.2"
              data-testid="Icon--dash"
              realfilename="dash-fill.svg"
            />
          </button>
        </div>
      </div>
      <div
        class="container"
        data-testid="scroll-container-content"
      >
        <div
          class="formWrapper"
        >
          <div
            class="StyledField-zri3d-0 text__c-txt___Uzv-G range__c-range___1aYaS larjFb"
          >
            <label
              class="StyledTextLabel-sc-1lq8qa5-0 text__c-txt__label___3wMPZ ksCHsT"
              data-garden-container-id="field"
              data-garden-container-version="1.1.3"
              data-garden-id="forms.text_label"
              data-garden-version="7.0.2"
              for="garden-field-container-54--input"
              id="garden-field-container-54--label"
            >
              <strong>
                Your name
              </strong>
               (optional)
            </label>
            <input
              aria-describedby="garden-field-container-54--hint"
              aria-invalid="false"
              aria-labelledby="garden-field-container-54--label"
              class="StyledTextInput-sc-1ezxcjx-0 text__c-txt__input___38pRd icTNBi"
              data-garden-id="forms.input"
              data-garden-version="7.0.2"
              data-testid="name-field"
              id="garden-field-container-54--input"
              name="name"
              value=""
            />
          </div>
          <div
            class="StyledField-zri3d-0 text__c-txt___Uzv-G range__c-range___1aYaS larjFb"
          >
            <label
              class="StyledTextLabel-sc-1lq8qa5-0 text__c-txt__label___3wMPZ ksCHsT"
              data-garden-container-id="field"
              data-garden-container-version="1.1.3"
              data-garden-id="forms.text_label"
              data-garden-version="7.0.2"
              for="garden-field-container-55--input"
              id="garden-field-container-55--label"
            >
              <strong>
                Email address
              </strong>
            </label>
            <input
              aria-describedby="garden-field-container-55--hint"
              aria-invalid="false"
              aria-labelledby="garden-field-container-55--label"
              class="StyledTextInput-sc-1ezxcjx-0 text__c-txt__input___38pRd icTNBi"
              data-garden-id="forms.input"
              data-garden-version="7.0.2"
              data-testid="email-field"
              id="garden-field-container-55--input"
              name="email"
              pattern="[a-zA-Z0-9!#$%&'*+/=?^_\`{|}~\\\\-\`']+(?:\\\\.[a-zA-Z0-9!#$%&'*+/=?^_\`{|}~\\\\-\`']+)*@(?:[a-zA-Z0-9](?:[a-zA-Z0-9-]*[a-zA-Z0-9])?\\\\.)+[a-zA-Z0-9](?:[a-zA-Z0-9-]*[a-zA-Z0-9])?"
              required=""
              value=""
            />
          </div>
          <div
            class="StyledField-zri3d-0 text__c-txt___Uzv-G range__c-range___1aYaS larjFb"
          >
            <label
              class="StyledTextLabel-sc-1lq8qa5-0 text__c-txt__label___3wMPZ ksCHsT"
              data-garden-container-id="field"
              data-garden-container-version="1.1.3"
              data-garden-id="forms.text_label"
              data-garden-version="7.0.2"
              for="garden-field-container-56--input"
              id="garden-field-container-56--label"
            >
              <strong>
                How can we help you?
              </strong>
            </label>
            <textarea
              aria-describedby="garden-field-container-56--hint"
              aria-invalid="false"
              aria-labelledby="garden-field-container-56--label"
              class="StyledTextInput-sc-1ezxcjx-0-textarea StyledTextarea-p4bofl-0 text__c-txt__input___38pRd text__c-txt__input--area___9Qxj1 ffjHNh"
              data-garden-id="forms.textarea"
              data-garden-version="7.0.2"
              data-testid="message-field"
              id="garden-field-container-56--input"
              name="description"
              required=""
              rows="5"
            />
          </div>
          <span />
        </div>
      </div>
      <footer
        class="sc-bZQynM bbmYGO"
      >
        <div
          class="sc-gzVnrw eLrsMK"
        >
          <a
            class="icon"
            data-testid="Icon--zendesk"
            href="https://www.zendesk.com/embeddables/?utm_source=webwidget&utm_medium=poweredbyzendesk&utm_campaign=image"
            tabindex="-1"
            target="_blank"
          >
            <svg
              realfilename="widget-icon_zendesk.svg"
              title="zendesk"
            />
          </a>
          <button
            class="button Button__StyledButton-sc-12lsl5w-0 index__c-btn___3y2Qe index__c-btn--primary___1YOfW lcPfmb"
            data-garden-container-id="keyboardfocus"
            data-garden-container-version="0.2.6"
            data-garden-id="buttons.button"
            data-garden-version="7.0.2"
            data-testid="button-ok"
            tabindex="0"
            type="submit"
          >
            Send
          </button>
        </div>
      </footer>
    </div>
  </form>
</div>
`;
